修复jacoco覆盖测试未生效问题